tests/snapshots/examples_fixtures/aether__regression_reuse_drop_let__main.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/regression_reuse_drop_let/main.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
